fixed scrollbar

--- a/src/components/PreviewModal/PreviewModal.module.scss
+++ b/src/components/PreviewModal/PreviewModal.module.scss
@@ -21,7 +21,7 @@
       flex-direction: column;
       align-items: flex-start;
       margin-left: 40px;
-      overflow-y: scroll;
+      overflow-y: auto;
       height: 80vh;
 
       .buttonBar {
